# mpm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
mpm/: __main__.py  build.py  build_utils.py  cli.py  installer.py  proto.py  registry.py
scripts/: generate-firmware-patch.sh
src/mesh_plugin_manager/: __init__.py  __main__.py  build.py  cli.py  installer.py  manifest.py  modules.py  patcher.py  proto.py  registry.py  resolver.py
src/mesh_plugin_manager/commands/: __init__.py  bump.py  generate.py  init.py  install.py  list.py  new.py  remove.py  version.py  watch.py
src/mesh_plugin_manager/patches/: __init__.py  firmware-patch-v2.5.0.diff  firmware-patch-v2.6.13.diff  firmware-patch-v2.7.11.diff  firmware-patch-v2.7.16.diff  firmware-patch.diff
src/mesh_plugin_manager/templates/: .gitignore.j2  CHANGELOG.md.j2  Module.cpp.j2  Module.h.j2  README.md.j2  diagnostics.cpp.j2  plugin.h.j2
